contain logo, avoid squishing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -162,6 +162,7 @@ pre code.hljs {
 		float: left;
 		height: 4em;
 		width: 4em;
+		object-fit: contain;
 		@include media ($tablet) {
 			padding-left: $em-base;
 		}
